Dernier commit. Projet arrêté

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,1 +1,2 @@
-<h1>Page not found, error 404</h1>
+<h1>Sorry we can't find this page! (Error 404)</h1>
+<a href="/"><img src="/img/ray.jpg" alt="Retour au menu principal"></a>
